# DrLojekyll

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: main.yml
bench/: BASELINE.md  README.md  runbench.sh
bench/baselines/: deep_chain_naive.cpp  phantom_pair_naive.cpp  pure_cycle_naive.cpp  tc_random_incr.cpp  tc_random_naive.cpp
bench/common/: bench.h
cmake/: Compiler.cmake  add_sanitizer_settings.cmake  ccache.cmake  options.cmake
data/examples/: average_weight.dr  pairwise_average_weight.dr
docs/: Architecture.md  ControlFlowIR.md  DataFlowIR.md  Grammar.md  Language.md  RuntimeAndCodegen.md  TODO.md
docs/Tutorial/: 1_KeepingTrackOfTheFamily.md
docs/proposals/: ADLFunctorSurface.md  AggregatingFunctors.md  DeltaRelationalIR.md  DemandSeeds.md  GeneratedSurface.md  IdeasTriage.md  KeyedInstances.md  PerfRoadmap.md  StackSafeNegation.checkpoint-b-notes.md  StackSafeNegation.checkpoint-c-notes.md  StackSafeNegation.md  (+8 more)
fuzz/: CMakeLists.txt  ParserFuzzer.cpp
lib/: CMakeLists.txt
scripts/: format-added-files  format-files
stageB/: manifest.md
tests/: CMakeLists.txt
tests/DeltaRelValidators/: CMakeLists.txt  InstanceOrderTest.cpp
tests/DrTest/: DrTest.cpp  DrTest.h
tests/InstanceStore/: CMakeLists.txt  InstanceStoreTest.cpp
tests/MiniDisassembler/: CMakeLists.txt  Standalone.cpp
tests/OptDiff/: FINDINGS.md  diffrun.sh  permcheck.py  runall.sh
tests/OptDiff/cases/: agg_in_scc_1.dr  aggregate_1.batches  aggregate_1.dr  aggregate_1.main.cpp  algebra_conflict_1.dr  algebra_conflict_1.main.cpp  algebra_dup_1.dr  algebra_invertible_1.dr  algebra_invertible_1.main.cpp  average_weight.batches  average_weight.dr  average_weight.main.cpp  booleans.main.cpp  booleans_diff.batches  booleans_diff.main.cpp  cf13_1.batches  cf13_1.dr  cf13_1.main.cpp  cf13_2.dr  cf13_2.main.cpp  cf13_3.dr  cf13_3.main.cpp  cf13_4.dr  cf13_4.main.cpp  cf13_5.dr  cf13_5.main.cpp  cf13_6.batches  cf13_6.dr  cf13_6.main.cpp  cf14_1.dr  cf14_1.main.cpp  cf14_2.dr  cf14_2.main.cpp  cf14_3.batches  cf14_3.dr  cf14_3.main.cpp  cf14_4.dr  cf14_4.main.cpp  cf14_5.dr  cf14_5.main.cpp  (+333 more)
tests/OptDiff/goldens/: aggregate_1.df.opt.golden  aggregate_1.monotone.stdout  aggregate_1.oracle.stdout  aggregate_1.stdout  average_weight.monotone.stdout  average_weight.oracle.stdout  average_weight.stdout  booleans.deltarel.opt.golden  booleans_diff.monotone.stdout  booleans_diff.oracle.stdout  booleans_diff.stdout  cf13_1.monotone.stdout  cf13_1.oracle.stdout  cf13_1.stdout  cf13_2.stdout  cf13_3.stdout  cf13_4.stdout  cf13_5.stdout  cf13_6.monotone.stdout  cf13_6.oracle.stdout  cf13_6.stdout  cf14_1.stdout  cf14_2.stdout  cf14_3.monotone.stdout  cf14_3.oracle.stdout  cf14_3.stdout  cf14_4.stdout  cf14_5.stdout  cf14_6.stdout  cf15_1.stdout  cf15_2.stdout  cf15_3.stdout  cf15_4.stdout  cf15_5.monotone.stdout  cf15_5.oracle.stdout  cf15_5.stdout  cf15_6.stdout  cf16_1.stdout  cf16_2.monotone.stdout  cf16_2.oracle.stdout  (+219 more)
tests/PointsTo/: CMakeLists.txt  Standalone.cpp
tests/Runtime/: CMakeLists.txt  RuntimeTest.cpp  StateCellTest.cpp
(+701 files in other folders)
